# lexi

./: .gitignore  CLAUDE.md  README.md  install.ps1  install.sh
.github/workflows/: ci.yml
lexi-cli/: .cli_history  .config.json  AGENTS.md  README.md  cli  pyproject.toml
lexi-cli/src/lexi_cli/: __init__.py  __main__.py  cli.py  default-aliases.json
lexi-cli/src/lexi_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
lexi-cli/src/lexi_cli/providers/: providers-config.yaml
lexi-cli/src/lexi_cli/providers/anthropic/: default-model.yaml  models.yaml
lexi-cli/src/lexi_cli/providers/nvidia/: model-aliases.yaml  models.yaml
lexi-cli/src/lexi_cli/providers/openai/: models.yaml
lexi-cli/tests/: test_cli.py
lexi-gui/: .eslintrc.js  AGENTS.md  README.md  launch-gui.sh  package-lock.json  package.json
lexi-gui/public/: index.html
lexi-gui/src/backend/: responder.py
lexi-gui/src/server/: index.js
prompts/examples/: ai-joke.json  hello-world.json
providers/: providers-config.yaml
providers/anthropic/: api-key.example  configured-models.yaml  model-aliases.yaml  models.yaml
providers/nvidia/: api-key.example  configured-models.yaml  default-model.yaml  models.yaml
providers/openai/: configured-models.yaml  model-aliases.yaml  models.yaml
utils/: foo.py  list_models.py  say-what.py
