[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lexi-cli"
version = "0.2.0"
description = "Lexi CLI for interacting with multiple LLM providers."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Project Authors" }]
dependencies = ["pyyaml>=6.0", "rich>=13.0"]

[project.optional-dependencies]
crypto = ["cryptography>=41.0"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "mypy>=1.0",
]

[project.scripts]
lexi = "lexi_cli.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"lexi_cli" = ["providers/**/*", "default-aliases.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short --cov=lexi_cli --cov-report=term-missing --cov-report=xml:coverage.xml"
markers = [
    "integration: marks tests requiring external services or full config",
]

[tool.ruff]
target-version = "py39"
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
